# object_recognition_core

./: CMakeLists.txt
apps/: training
apps/dbscripts/: mesh_add.py  object_add.py  object_delete.py  object_search.py
include/object_recognition_core/db/: wrap_object_db.h
include/object_recognition_core/db/prototypes/: observations.hpp
python/object_recognition_core/db/: models.py  tools.py
src/common/: CMakeLists.txt  dict_json_conversion.cpp  wrap_db_pose_result.cpp
src/db/: CMakeLists.txt  ObservationWriter.cpp  model_utils.cpp  observations.cpp  opencv.cpp  wrap_db_documents.cpp  wrap_db_parameters.cpp
src/pipelines/: CMakeLists.txt
